Ajout de image’s prototypesque du projet de robot.

--- a/2009‑02‑07_-_Projet_de_machine_pour_reparer_articulations_des_phalanges.html
+++ b/2009‑02‑07_-_Projet_de_machine_pour_reparer_articulations_des_phalanges.html
@@ -142,6 +142,36 @@
 						<li>Machine équipé d'une appareil radio-x horizontale &amp; verticale afin de vérifier la position de la fracture.</li>
 					</ul>
 
+					<div class="flex">
+						<div class="ui" style="width: 50%">
+							<figure class="image content image-modal">
+								<img class="image" src="Plan_3D_Max/Arifio_Gazmênis_-_Machine_pour_les_doigts_01.max.png" alt="">
+								<figcaption class="description">Plan rudimentaire un.</figcaption>
+							</figure>
+						</div>
+
+						<div class="ui" style="width: 50%">
+							<figure class="image content image-modal">
+								<img class="image" src="Plan_3D_Max/Arifio_Gazmênis_-_Machine_pour_les_doigts_02.max.png" alt="">
+								<figcaption class="description">Plan rudimentaire deux.</figcaption>
+							</figure>
+						</div>
+
+						<div class="ui" style="width: 50%">
+							<figure class="image content image-modal">
+								<img class="image" src="Plan_3D_Max/Arifio_Gazmênis_-_Machine_pour_les_doigts_03.max.png" alt="">
+								<figcaption class="description">Plan rudimentaire trois.</figcaption>
+							</figure>
+						</div>
+
+						<div class="ui" style="width: 50%">
+							<figure class="image content image-modal">
+								<img class="image" src="Plan_3D_Max/Arifio_Gazmênis_-_Machine_pour_les_doigts_04.max.png" alt="">
+								<figcaption class="description">Plan rudimentaire quatre.</figcaption>
+							</figure>
+						</div>
+					</div>
+
 					<blockquote>
 						<p>
 							<strong>2009-02-07 :</strong> Machine robotisé à 2 bras articulé à radio x intégré pour les fractures des doigts.<br/> Ma méthode mesure l'angle de casse sur la radio, placer deux vis de 3cm à embouts crochu dans les deux pas de la phalange brisé, puis, l'on configure le software du robot pour replacer l'angle originel de l'os en utilisant des bras robots très précis sur au bout desquels sont fixé les embouts croché, une fois replacé la facture tant horizontalement X, verticalement Y que dans l'axe Z (rotation), on effectue dans la jonction de la facture
